--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "mongoose": "^5.12.10",
     "react-bootstrap": "^1.6.0"
   }
 }
